adding last name to clients

--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -1,7 +1,12 @@
 <div id="<%= dom_id client %>">
   <p class="my-5">
-    <strong class="block font-medium mb-1">Name:</strong>
-    <%= client.name %>
+    <strong class="block font-medium mb-1">First Name:</strong>
+    <%= client.first_name %>
+  </p>
+
+  <p class="my-5">
+    <strong class="block font-medium mb-1">Last Name:</strong>
+    <%= client.last_name %>
   </p>
 
   <p class="my-5">
