--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -19,4 +19,28 @@
     <%= client.social_media %>
   </p>
 
+  <p class="my-5">
+    <strong class="block font-medium mb-1">Addresses</strong>
+  </p>
+
+
+  <% client.addresses.each do |address| %>
+
+    <ul role="list" class="divide-y divide-gray-100">
+      <li class="flex justify-between gap-x-6 py-5">
+        <div class="flex min-w-0 gap-x-4">
+          <div class="min-w-0 flex-auto">
+            <p class="text-sm font-semibold leading-6 text-gray-900"><%= address.street %></p>
+            <p class="mt-1 truncate text-xs leading-5 text-gray-500"><%= address.location_number %></p>
+            <p class="mt-1 truncate text-xs leading-5 text-gray-500"><%= address.postal_code %></p>
+          </div>
+        </div>
+        <div class="hidden shrink-0 sm:flex sm:flex-col sm:items-end">
+          <p class="text-sm leading-6 text-gray-900"><%= address.state %></p>
+          <p class="mt-1 text-xs leading-5 text-gray-500"><%= address.city %></p>
+        </div>
+      </li>
+    </ul>
+
+  <% end %>
 </div>
