--- a/app/views/addresses/_address.html.erb
+++ b/app/views/addresses/_address.html.erb
@@ -5,8 +5,8 @@
   </p>
 
   <p class="my-5">
-    <strong class="block font-medium mb-1">Type:</strong>
-    <%= address.type %>
+    <strong class="block font-medium mb-1">Address Type:</strong>
+    <%= address.address_type %>
   </p>
 
   <p class="my-5">
